--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -2,7 +2,7 @@ name: Snapshot Build
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop-1.x" ]
     paths-ignore:
       - "docs/**"
       - "**.md"
@@ -14,7 +14,7 @@ jobs:
       - name: Check out develop branch
         uses: actions/checkout@v3
         with:
-          ref: develop
+          ref: develop-1.x
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -56,7 +56,7 @@ jobs:
         with:
           auth: ${{ secrets.GIST_ACCESS_TOKEN }}
           gistID: e0159b67e62fe9b4c7657e58419b6cc1
-          filename: coverage_badge.json
+          filename: coverage_badge_1x.json
           label: coverage
           message: "${{ steps.collect_line_coverage.outputs.result }}%"
           valColorRange: "${{ steps.collect_line_coverage.outputs.result }}"
