--- a/settings.gradle
+++ b/settings.gradle
@@ -31,18 +31,20 @@ dependencyResolutionManagement {
         libs {
             version("gradle", "7.6.1")
             version("node", "18.15.0")
-            version("spring-framework", "5.3.26")
-            version("spring-boot", "2.7.10")
-            version("slf4j", "1.7.36")
+            version("spring-framework", "6.0.7")
+            version("spring-boot", "3.0.5")
+            version("slf4j", "2.0.7")
             version("subetha", "3.1.7")
             version("commons-io", "2.11.0")
-            version("jakarta-servletapi", "4.0.4")
-            version("jakarta-annotationsapi", "1.3.5")
+            version("jakarta-servletapi", "6.0.0")
+            version("jakarta-annotationsapi", "2.1.1")
+            version("jakarta-mail", "2.1.1")
+            version("jakarta-activation", "2.1.1")
             version("lombok", "1.18.26")
             version("testng", "7.7.1")
             version("mockito", "4.11.0")
             version("mockito-testng", "0.4.31")
-            version("logback", "1.2.12")
+            version("logback", "1.4.6")
             version("assertj", "3.24.2")
             version("hamcrest", "2.2")
             version("json-path", "2.7.0")
@@ -58,10 +60,9 @@ dependencyResolutionManagement {
             version("palantirformat", "2.28.0")
             version("lombokplugin", "5.0.0")
             version("cargo", "2.9.0")
-            version("javax-mail", "1.6.2")
-            version("javax-activation", "1.2.0")
-            version("tomcat", "9.0.73")
+            version("tomcat", "10.1.7")
             version("snakeyaml", "1.33")
+            version("angusmail", "1.0.0")
 
             library("spring-boot-autoconfigure", "org.springframework.boot", "spring-boot-autoconfigure").versionRef("spring-boot")
             library("spring-boot-test", "org.springframework.boot", "spring-boot-test").versionRef("spring-boot")
@@ -78,6 +79,8 @@ dependencyResolutionManagement {
             library("apache-commons-io", "commons-io", "commons-io").versionRef("commons-io")
             library("jakarta-servletapi", "jakarta.servlet", "jakarta.servlet-api").versionRef("jakarta-servletapi")
             library("jakarta-annotationsapi", "jakarta.annotation", "jakarta.annotation-api").versionRef("jakarta-annotationsapi")
+            library("jakarta-mail", "jakarta.mail", "jakarta.mail-api").versionRef("jakarta-mail")
+            library("jakarta-activation", "jakarta.activation", "jakarta.activation-api").versionRef("jakarta-activation")
             library("testng", "org.testng", "testng").versionRef("testng")
             library("mockito-core", "org.mockito", "mockito-core").versionRef("mockito")
             library("mockito-testng", "org.mockito", "mockito-testng").versionRef("mockito-testng")
@@ -86,11 +89,10 @@ dependencyResolutionManagement {
             library("hamcrest", "org.hamcrest", "hamcrest").versionRef("hamcrest")
             library("jsonpath", "com.jayway.jsonpath", "json-path").versionRef("json-path")
             library("jackson-databind", "com.fasterxml.jackson.core", "jackson-databind").versionRef("jackson")
-            library("javax-mail", "javax.mail", "javax.mail-api").versionRef("javax-mail")
-            library("javax-activation", "javax.activation", "javax.activation-api").versionRef("javax-activation")
             library("tomcat-embed-websocket", "org.apache.tomcat.embed", "tomcat-embed-websocket").versionRef("tomcat")
             library("lombok", "org.projectlombok", "lombok").versionRef("lombok")
             library("snakeyaml", "org.yaml", "snakeyaml").versionRef("snakeyaml")
+            library("angusmail", "org.eclipse.angus", "angus-mail").versionRef("angusmail")
 
             plugin("owasp-dependencycheck", "org.owasp.dependencycheck").versionRef("owasp-dependencycheck")
             plugin("spring-boot-plugin", "org.springframework.boot").versionRef("spring-boot")
