--- a/mailspy-frontend/package.json
+++ b/mailspy-frontend/package.json
@@ -44,6 +44,7 @@
         "uuid": "9.0.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "7.21.11",
         "@babel/preset-react": "7.22.5",
         "@babel/preset-typescript": "7.22.11",
         "@craco/craco": "7.1.0",
